Kubernetes-Manifests-file/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: myapp-prod.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todolist-backend
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todolist-frontend
                port:
                  number: 3000
